--- a/merit/seniors/paul.html
+++ b/merit/seniors/paul.html
@@ -307,7 +307,7 @@
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
           <li><a href="./index.html">Seniors</a> <span class="divider">/</span></li>
-          <li class="active">Boren Scholarship</li>
+          <li class="active">Paul and Daisy Soros Fellowships for New Americans</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Boren Scholarship</h2>
+                <h2>Paul and Daisy Soros Fellowships for New Americans</h2>
                 <hr/>
               </div>
             </div>
